# django-extensions

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.rst  conftest.py  manage.py  myTests.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  compile_catalog.yml  linters.yml  precommit.yml  pytest.yml  security.yml
.tx/: config
django_extensions/: __init__.py  apps.py  collision_resolvers.py  compat.py  import_subclasses.py  settings.py  validators.py
django_extensions/admin/: __init__.py  filter.py  mixins.py  widgets.py
django_extensions/auth/: mixins.py
django_extensions/conf/app_template/: forms.py.tmpl  urls.py.tmpl
django_extensions/conf/model_class_template/: model.py-tpl
django_extensions/db/: decorators.py  models.py
django_extensions/db/fields/: __init__.py  crypto.py  crypto_field.py  encrypted.py  json.py
django_extensions/forms/: widgets.py
django_extensions/helpers/: upload.py
django_extensions/jobs/daily/: cache_cleanup.py  daily_cleanup.py
django_extensions/logging/: filters.py
django_extensions/management/: __init__.py  argactions.py  base.py  color.py  debug_cursor.py  email_notifications.py  jobs.py  modelviz.py  mysql.py  notebook_extension.py  shells.py  shells.py.new_imports  signals.py  subcommands.py  technical_response.py  utils.py
django_extensions/management/commands/: _private.py  admin_generator.py  check_templates.py  clean_pyc.py  clear_cache.py  compile_pyc.py  create_app.py  create_app_from_dia.py  create_command.py  create_jobs.py  create_superuser.py  create_template_tags.py  delete_squashed_migrations.py  delete_unregistered_media.py  describe_admin.py  describe_api.py  describe_fixture.py  describe_form.py  dev.py  drop_test_database.py  dumpscript.py  export_emails.py  find_template.py  generate_model.py  generate_password.py  generate_secret_key.py  graph_app_model_dependencies.py  graph_models.py  list_fields.py  list_latest_migrations.py  list_model_info.py  list_signals.py  mail_debug.py  managestate.py  merge_model_instances.py  migrationstate.py  notes.py  passwd.py  pipchecker.py  print_settings.py  (+30 more)
django_extensions/middlewares/: threadlocal.py
django_extensions/migrations/: 0001_empty.py
django_extensions/mongodb/: models.py
django_extensions/mongodb/fields/: __init__.py  encrypted.py  json.py
django_extensions/templatetags/: debugger_tags.py  extended_tags.py  highlighting.py  indent_text.py  syntax_color.py  truncate_letters.py  widont.py
django_extensions/tests/: __init__.py  encrypted_fields.py  fields.py  json_field.py  management_command.py  models.py  shortuuid_field.py  test_clean_pyc.py  test_compile_pyc.py  test_dumpscript.py  test_models.py  test_print_settings.py  test_templatetags.py  utils.py  uuid_field.py
django_extensions/tests/testapp/: models.py
django_extensions/urls/: __init__.py  autocomplete.py
django_extensions/utils/: __init__.py  deprecation.py  dia2django.py  extract_views_from_urlpatterns.py  internal_ips.py  model_cache_ids_fields.py  text.py  uuid.py  validatingtemplatetags.py
django_extensions/views/: autocomplete.py
docs/: AUTHORS  Makefile  admin_extensions.rst  admin_generator.rst  check_templates.py  command_extension_ideas.rst  command_extensions.rst  command_signals.rst  conf.py  create_app.rst  create_template_tags.rst  creating_release.txt  debugger_tags.rst  delete_squashed_migrations.rst  dumpscript.rst  export_emails.rst  field_extensions.rst  generate_password.rst  graph_models.rst  index.rst  installation_instructions.rst  jobs_scheduling.rst  list_model_info.rst  list_signals.rst  mail_debug.rst  managestate.rst  mercurial_gateway.rst  merge_model_instances.rst  migrationstate.rst  model_extensions.rst  namespace_proposal.rst  permissions.rst  print_settings.rst  requirements.txt  reset_db.rst  reset_schema.rst  runprofileserver.rst  runscript.rst  runserver_plus.rst  shell_plus.rst  (+13 more)
example/: manage.py  settings.py  urls.py
example/blog/: admin.py  models.py  views.py
example_project/: manage.py
example_project/example_project/: settings.py  urls.py  wsgi.py
extensions/: __init__.py
extensions/conf/app_template/: forms.py
extensions/jobs/daily/: cache_cleanup.py  daily_cleanup.py
extensions/management/: jobs.py  modelviz.py  signals.py
extensions/management/commands/: create_app.py  runjob.py  (+15 more)
tests/: __init__.py  conftest.py  pythonrc.py  runner.py  test_admin_filter.py  test_admin_widgets.py  test_autoslug_fields.py  test_clean_pyc.py  test_clear_caches.py  test_color.py  test_compat.py  test_compatibility.py  test_compile_pyc.py  test_create_command.py  test_crypto_fields.py  test_dumpscript.py  test_encrypted_fields.py  test_fields.py  test_find_template.py  test_json_field.py  test_logging_filters.py  test_management_command.py  test_models.py  test_modificationdatetime_fields.py  test_module_in_project_dir.py  test_parse_mysql_cnf.py  test_print_settings.py  test_randomchar_field.py  test_runjob.py  test_runscript.py  test_runserver.py  test_shortuuid_field.py  test_sqldiff.py  test_template_rendering.py  test_templatetags.py  test_timestamped_model.py  test_utils.py  test_uuid_field.py  test_validators.py  test_version.py  (+1 more)
tests/auth/: test_mixins.py
tests/collisions/: apps.py  models.py
tests/db/: test_iterative_delete.py
tests/logging/: test_filters.py
tests/management/: test_email_notifications.py  test_modelviz.py
tests/templatetags/: test_highlighting.py  test_indent_text.py  test_syntax_color.py
tests/testapp/: __init__.py  admin.py  apps.py  classes_to_include.py  factories.py  fields.py  file_with_utf8_notes.py  file_without_utf8_notes.py  models.py  settings.py  urls.py
tests/testapp_with_appconfig/: __init__.py  admin.py  apps.py  models.py  tests.py  views.py
tests/testapp_with_no_models_file/: admin.py  teslacar.py
(+153 files in other folders)
