[metadata]
name = django-extensions
version = attr: django_extensions.__version__
author = Michael Trier
author_email = mtrier@gmail.com
maintainer = Bas van Oostveen
maintainer_email = v.oostveen@gmail.com
license = MIT License
description = Extensions for Django
url = https://github.com/django-extensions/django-extensions
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
platforms = any
project_urls =
    Documentation = https://django-extensions.readthedocs.io/
    Changelog = https://github.com/django-extensions/django-extensions/blob/main/CHANGELOG.md
    Source = https://github.com/django-extensions/django-extensions
    Tracker = https://github.com/django-extensions/django-extensions/issues

[options]
install_requires = Django>=3.2
python_requires = >=3.6

[options.package_data]
django_extensions =
    locale/pl/LC_MESSAGES/django.mo
    locale/pl/LC_MESSAGES/django.po
    locale/da/LC_MESSAGES/django.mo
    locale/da/LC_MESSAGES/django.po
    locale/pt_BR/LC_MESSAGES/django.mo
    locale/pt_BR/LC_MESSAGES/django.po
    locale/ja/LC_MESSAGES/django.mo
    locale/ja/LC_MESSAGES/django.po
    locale/el/LC_MESSAGES/django.mo
    locale/el/LC_MESSAGES/django.po
    locale/it/LC_MESSAGES/django.mo
    locale/it/LC_MESSAGES/django.po
    locale/ru/LC_MESSAGES/django.mo
    locale/ru/LC_MESSAGES/django.po
    locale/ro/LC_MESSAGES/django.mo
    locale/ro/LC_MESSAGES/django.po
    locale/pt/LC_MESSAGES/django.mo
    locale/pt/LC_MESSAGES/django.po
    locale/ar/LC_MESSAGES/django.po
    locale/hu/LC_MESSAGES/django.mo
    locale/hu/LC_MESSAGES/django.po
    locale/de/LC_MESSAGES/django.mo
    locale/de/LC_MESSAGES/django.po
    locale/id/LC_MESSAGES/django.mo
    locale/id/LC_MESSAGES/django.po
    locale/fr/LC_MESSAGES/django.mo
    locale/fr/LC_MESSAGES/django.po
    locale/es/LC_MESSAGES/django.mo
    locale/es/LC_MESSAGES/django.po
    locale/en/LC_MESSAGES/django.mo
    locale/en/LC_MESSAGES/django.po
    static/django_extensions/css/jquery.autocomplete.css
    static/django_extensions/js/jquery.ajaxQueue.js
    static/django_extensions/js/jquery.bgiframe.js
    static/django_extensions/js/jquery.autocomplete.js
    static/django_extensions/img/indicator.gif
    templates/django_extensions/graph_models/original/label.dot
    templates/django_extensions/graph_models/original/relation.dot
    templates/django_extensions/graph_models/original/digraph.dot
    templates/django_extensions/graph_models/django2018/label.dot
    templates/django_extensions/graph_models/django2018/relation.dot
    templates/django_extensions/graph_models/django2018/digraph.dot
    templates/django_extensions/widgets/foreignkey_searchinput.html
    conf/app_template/__init__.py.tmpl
    conf/app_template/views.py.tmpl
    conf/app_template/models.py.tmpl
    conf/app_template/urls.py.tmpl
    conf/app_template/forms.py.tmpl
    conf/app_template/migrations/__init__.py.tmpl
    conf/command_template/management/__init__.py.tmpl
    conf/command_template/management/commands/__init__.py.tmpl
    conf/command_template/management/commands/sample.py.tmpl
    conf/template_tags_template/templatetags/__init__.py.tmpl
    conf/template_tags_template/templatetags/sample.py.tmpl
    conf/jobs_template/jobs/__init__.py.tmpl
    conf/jobs_template/jobs/sample.py.tmpl
    conf/jobs_template/jobs/hourly/__init__.py.tmpl
    conf/jobs_template/jobs/daily/__init__.py.tmpl
    conf/jobs_template/jobs/monthly/__init__.py.tmpl
    conf/jobs_template/jobs/yearly/__init__.py.tmpl
    conf/jobs_template/jobs/weekly/__init__.py.tmpl

[flake8]
ignore = E128,E731,W503,W504
max-line-length = 512
exclude=venv/

[tool:pytest]
DJANGO_SETTINGS_MODULE=tests.testapp.settings
norecursedirs=venv* .tox .eggs build dist django_extensions.egg-info django_extensions/mongodb
addopts = --doctest-modules --doctest-ignore-import-errors --nomigrations --cov=django_extensions --cov-report html --cov-report term

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_third_party = django
known_first_party = django_extensions
multi_line_output = 5
line_length=128

[pycodestyle]
count = False
max-line-length = 512
statistics = True
ignore = D100,D101,D102,D103,D104,D105,D106,D107,D202,D203,D205,D210,D212,D400,D406,D407,D412,D413
